# Orthanc-Labs

./: CMakeLists.txt  README.md  launch.sh
.drone detection/: CMakeLists.txt  GETTING_STARTED.md  README.md  launch.sh
.drone detection/config/: raspberry_pi_config.json  zigzag_multi_camera.json
.drone detection/include/atak/: cot_sender.hpp
.drone detection/include/config/: config_manager.hpp
.drone detection/include/core/: fast_voxel_detector.hpp
.drone detection/include/rtsp/: stream_processor.hpp
.drone detection/include/visualization/: voxel_visualizer.hpp
.drone detection/scripts/: camera_position_server.py  camera_sensor_client.py  launch_realtime_system.sh  launch_system.sh  quick_demo.sh  requirements.txt  setup_visualization.sh  test_camera_sensor.py  visualize_simple.py  visualize_voxel_grid.py  visualize_voxel_grid_macos.py
.drone detection/src/config/: config_manager.cpp
.drone detection/src/core/: fast_voxel_detector.cpp  motion_detector.cpp  spatial_index.cpp
Pixeltovoxelprojector-main/: setup.py
bird detection/: README.md  visualization_env.sh
bird detection/config/: consensus_detection.json  fast_drone_detector.json  visualization_config.json
bird detection/scripts/: camera_position_server.py  camera_sensor_client.py  launch_realtime_system.sh  static_voxel_viewer.py  test_camera_sensor.py  visualize_simple.py  visualize_voxel_grid.py  visualize_voxel_grid_macos.py
bird detection/src/: main.cpp
bird detection/src/atak/: cot_sender.cpp
bird detection/src/rtsp/: stream_processor.cpp
bird detection/src/visualization/: voxel_visualizer.cpp
